# Ignition

./: .gitignore  .gitmodules  CMakeLists.txt  Ignition.igproj  README.md  imgui.ini
assets/: AssetRegistry.igar
assets/scenes/: MainScene.igscene
assets/scripts/: CarController.cpp  CarVisualRotate.cpp  GameLogic.cpp  RaceShared.h
assets/textures/Poliigon_GrassPatchyGround_4585/4K/: Poliigon_GrassPatchyGround_4585.mtlx
